# BlocksProject

./: .gitignore  .gitmodules  .polyscope.ini  CLAUDE.md  CMakeLists.txt  imgui.ini  notes.txt  run_current_demo.sh
demo_source/: GradientspaceDemo.cpp
meshes/: gen_sphere.py
samples/: cell_match_test.cpp  cut_cell.cpp  enumerate_cells.cpp  visualize_cells.cpp  winding_test.cpp
src/: BoxGenerator.cpp  BoxGenerator.h  ConvexHull.h  DenseMeshAABBTree.cpp  DenseMeshAABBTree.h  DenseMeshAPI.cpp  DenseMeshAPI.h  DummyParallelAPI.h  GeometryUtils.cpp  GeometryUtils.h  MeshCode.h  SphereGenerator.cpp  SphereGenerator.h
viewer/: CMakeLists.txt  build.sh  gridviewer  imgui.ini  main.cpp
